PriorityQueue update + unit test add